# SHARY-ISSA-PY

./: README.md
Shark_iSSA_py/: README.md  pyproject.toml
Shark_iSSA_py/configs/: example.yml
Shark_iSSA_py/sharkissa/: __init__.py  analysis_social.py  clean.py  config.py  design.py  regularize.py  report.py  steps.py  validate.py
Shark_iSSA_py/sharkissa.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
Shark_iSSA_py/sharkissa/cli/: main.py
Shark_iSSA_py/sharkissa/covariates/: social.py
Shark_iSSA_py/sharkissa/fit/: conditional.py
